--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     </head>
     <body>
+        
         <header class="header">
-            <a href="#" class="logo1">Kunal.</a>
+            <section class="logoname"><a href="#" class="logo1">Kunal.</a></section>
             <nav class="navbar">
                 <a href="#" class="active">Home</a>
-                <a href="#about" target="_smooth">About</a>
-                <a href="#experience"target="_smooth">Experiences</a>
-                <a href="#MyProjects"target="_smooth">Projects</a>
-                <a href="#certificate"target="_smooth">Certifications</a>
+                <a href="#about">About</a>
+                <a href="#experience">Experiences</a>
+                <a href="#MyProjects">Projects</a>
+                <a href="#certificate">Certifications</a>
                 <a href="#">Contact</a>
             </nav>
         </header>
@@ -202,7 +203,7 @@
           <div class="CertificationItem">
             <a href="https://olympus.mygreatlearning.com/courses/47916/certificate" target="_blank">
               <img src="ds.png" alt="Python For Data Science">
-              <h3>Front End Development - CSS</h3>
+              <h3>Python for Data Science</h3>
             </a>
           </div>
           <div class="CertificationItem">
