--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
                 <a href="#experience">Experiences</a>
                 <a href="#MyProjects">Projects</a>
                 <a href="#certificate">Certifications</a>
-                <a href="#">Contact</a>
+                <a href="#skill">Skills</a>
             </nav>
         </header>
         <section class="home">
             <div class="home-content">
                 <h1>Hi, I'm Kunal Shenoy</h1>
-                <h3>Computer Engineer</h3>
+                <h3>Computer Science Engineer</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non repellat suscipit sequi officiis ad fugit accusantium quibusdam eveniet cum blanditiis, tempore, modi eius tenetur ea, neque ex optio voluptate molestias.</p>
                 <div class="btn-box">
-                    <a href="#">Let's Talk</a>
-                    <a href="#">Know More</a>
+                    <a href="https://linktr.ee/kunalshenoy45" target="_blank">Let's Talk</a>
+                    <a href="./resume.pdf" download>Resume<i class="fa fa-download"></i></a>
                 </div>
             </div>
             <div class="homepage">
@@ -59,6 +59,7 @@
                 </div>
             </div>
         </section>
+
         <section class="header_experience" id="experience">
             <h2>My <span>Experience</span></h2>
         </section>
@@ -214,6 +215,24 @@
           </div>
         </section>
 
+        <section class="SkillsHeader">
+          <h2>My <span>Skills</span></h2>
+        </section>
+        <div class="skill" id="skill">
+          <img src="html-css.jpg" alt="HTML-CSS">
+          <img src="c++.svg" alt="C++" width="150px">
+          <img src="pythonPP.png" alt="PythonPP" width="150px">
+          <img src="my-sql.png" alt="MySQL" width="300px">
+          <img src="aws.png" alt="AWS" width="150px">
+          <img src="vs-code.png" alt="VSCode" width="150px">
+          <img src="figma.png" alt="Figma" width="150px">
+          <img src="github.png" alt="Github" width="150px">
+          <img src="ms-office.png" alt="MSOffice" width="300px">
+        </div>
+      </div>
+
+
+
 
 
 
@@ -233,6 +252,10 @@
           </div>
         </div>
       </div>
+    </footer>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</html>
+
     </footer>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </html>
