--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non repellat suscipit sequi officiis ad fugit accusantium quibusdam eveniet cum blanditiis, tempore, modi eius tenetur ea, neque ex optio voluptate molestias.</p>
                 <div class="btn-box">
                     <a href="https://linktr.ee/kunalshenoy45" target="_blank">Let's Talk</a>
-                    <a href="./resume.pdf" download>Resume<i class="fa fa-download"></i></a>
+                    <a href="https://drive.google.com/file/d/1vB6KOyPRIJFn6yRWctKby6qVcNRQbI6t/view?usp=sharing" download target="_blank">Resume<i class="fa fa-download"></i></a>
                 </div>
             </div>
             <div class="homepage">
