--- a/index.html
+++ b/index.html
@@ -73,7 +73,15 @@
               <p>As a student partner, I played the role of Campus Ambassador at NMIMS Navi Mumbai for Internshala</p>
             </div>
           </div>
-          
+            <div class="container">
+            <div class="logo">
+              <img src="stuco.png" alt="Logo 1" width="250px">
+            </div>
+            <div class="experience">
+              <h2>Head of Marketing</h2>
+              <p>Overseeing, promoting, marketing and helping events to function flawlessly</p>
+            </div>
+          </div>          
           <div class="container">
             <div class="logo">
               <img src="stuco.png" alt="Logo 2" width="250px">
