--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>Passionate about the intersection of technology and design, I possess developing skills in UI/UX design, Web Development & Machine Learning. Additionally, my efficient leadership skills enable me to drive teams towards success. I am always looking for opportunities to learn and grow in these areas and I am excited to connect with like-minded professionals in the industry.</p>
                 <div class="btn-box">
                     <a href="https://linktr.ee/kunalshenoy45" target="_blank">Let's Talk</a>
-                    <a href="https://drive.google.com/file/d/1vB6KOyPRIJFn6yRWctKby6qVcNRQbI6t/view?usp=sharing" download target="_blank">Resume<i class="fa fa-download"></i></a>
+                    <a href="https://drive.google.com/file/d/1lGmTFU9vVinYhgZTJbIHzOrSAphEQ-LW/view?usp=sharing" download target="_blank">Resume<i class="fa fa-download"></i></a>
                 </div>
             </div>
             <div class="homepage">
@@ -66,6 +66,24 @@
         <section class="myexperience">
           <div class="container">
             <div class="logo">
+              <img src="unstop.png" alt="Logo 0" width="250px" >
+            </div>
+            <div class="experience">
+              <h2>Regional Student Director</h2>
+              <p>As a Regional Student Director, I play the role of overseeing the Campus Ambassador for Unstop & work with Team Unstop</p>
+            </div>
+          </div>
+          <div class="container">
+            <div class="logo">
+              <img src="codsoft.png" alt="Logo 0" width="250px" >
+            </div>
+            <div class="experience">
+              <h2>Machine Learning Intern</h2>
+              <p>Performing tasks and solving real-life machine learning problems and working on applications of ML.</p>
+            </div>
+          </div>
+          <div class="container">
+            <div class="logo">
               <img src="internshala.png" alt="Logo 1" width="250px" >
             </div>
             <div class="experience">
@@ -73,15 +91,16 @@
               <p>As a student partner, I played the role of Campus Ambassador at NMIMS Navi Mumbai for Internshala</p>
             </div>
           </div>
-            <div class="container">
+          <div class="container">
             <div class="logo">
-              <img src="stuco.png" alt="Logo 1" width="250px">
+              <img src="stuco.png" alt="Logo 2" width="250px" >
             </div>
             <div class="experience">
               <h2>Head of Marketing</h2>
-              <p>Overseeing, promoting, marketing and helping events to function flawlessly</p>
+              <p>Overseeing and strategizimg Marketing strategies for School of Technology Management & Engineering (STME). </p>
             </div>
-          </div>          
+          </div>
+          
           <div class="container">
             <div class="logo">
               <img src="stuco.png" alt="Logo 2" width="250px">
@@ -169,6 +188,23 @@
           <h2>My <span>Certifications</span></h2>
         </section>
         <section class="Certifications">
+          <div class="CertificationItem">
+            <a href="https://drive.google.com/file/d/19Subp2ciIhj8j39gSaHcUD3uBO0dOLPy/view" target="_blank">
+              <img src="accenture.png" alt="Data Analytics and Visualization Job Simulation">
+              <h3>Data Analytics and Visualization Job Simulation</h3>
+            </a>
+          </div>
+          <div class="CertificationItem">
+              <img src="microsoft.png" alt="Microsoft Learn AI SKills Challenge">
+              <h3>Microsoft Learn AI SKills Challenge</h3>
+            </a>
+          </div>
+          <div class="CertificationItem">
+            <a href="https://www.datacamp.com/skill-verification/AIF0014954436444" target="_blank">
+              <img src="datacamp.png" alt="AI Fundamentals by DataCamp">
+              <h3>AI Fundamentals by DataCamp</h3>
+            </a>
+          </div>
           <div class="CertificationItem">
             <a href="https://www.udemy.com/certificate/UC-b680d4ea-9aee-4adc-bddc-6a9128612fac/" target="_blank">
               <img src="udemy.jpg" alt="Complete Web & Mobile Designer in 2023: UI/UX, Figma, +more">
