--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
         <section class="about" id="about">
             <div class="about-img">
-                <img src="self.jpg" alt="">
+                <img src="my-photo.jpg" alt="">
                 <span class="circle-spin"></span>
             </div>
             <div class="about-content">
@@ -71,6 +71,15 @@
             <div class="experience">
               <h2>Regional Student Director</h2>
               <p>As a Regional Student Director, I play the role of overseeing the Campus Ambassador for Unstop & work with Team Unstop</p>
+            </div>
+          </div>
+          <div class="container">
+            <div class="logo">
+              <img src="e-cell.png" alt="Logo 0" width="250px" >
+            </div>
+            <div class="experience">
+              <h2>Head of Administration</h2>
+              <p>Overseeing Technical and R&D Departments and working as an administrative body for smooth functioning of STME E-Cell</p>
             </div>
           </div>
           <div class="container">
@@ -320,3 +329,4 @@
     </footer>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </html>
+
